# phaicull

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  README.md  SUMMARY.md  TODO.md  phaicull.toml.example  pyproject.toml
.local-photos/: .gitkeep
core/: __init__.py  cli.py  config.py
core/analyzers/: __init__.py  base.py  blur.py  duplicates.py  exposure.py
core/database/: __init__.py  connection.py  dao.py  migrate.py  schema.py
core/database/migrations/: 001_initial.sql  002_project_schema.sql  003_metrics_index.sql
core/database/migrations_registry/: 001_initial.sql
core/models/: __init__.py
core/utils/: __init__.py  mime.py
docs/: adr-001.md  analyzers_sprint1.md  decisions.md  features_schema_v1.md  json_contract_scan_v1.md  progress_contract.md  testing_strategy.md  thumbnails.md
phaicull/: __init__.py  cli.py  detectors.py  filter.py
tests/: __init__.py  conftest.py  test_conftest_fixtures.py  test_detectors.py  test_filter.py
tests/analyzers/: __init__.py  test_base.py  test_sprint1_wiring.py
tests/cli/: test_cli.py
tests/config/: test_config.py
tests/database/: test_dao.py  test_migrate.py
tests/fixtures/images/: .gitkeep
tests/utils/: __init__.py  test_mime.py
